java 1.8 mandatory amd some codebase update (#33)
Signed-off-by: Olivier Lamy <olamy@apache.org>